feat: adding jwt and auth
