# pkg/account/routes.go
@@ -12,9 +12,9 @@ func NewRoutes(handler *Handler) Routes {
 
 func (r Routes) RegisterRoutes(private, public *gin.RouterGroup) {
 	public.POST("/account", r.handler.Create)
+	public.POST("/account/login", r.handler.Login)
+	public.POST("/account/login/pin", r.handler.LoginPin)
 	private.POST("/account", r.handler.CreatePinUser)
-	private.POST("/account/login", r.handler.Login)
-	private.POST("/account/login/pin", r.handler.LoginPin)
 	private.DELETE("/account/:id", r.handler.Delete)
 	private.GET("/account", r.handler.Find)
 }
